# powda

./: Cargo.toml  README.md  test_powda
powda-cli/: Cargo.toml
powda-cli/src/: main.rs  test.rs
powda-cli/src/commands/: mod.rs
powda-cli/src/handlers/: mod.rs  password_handler.rs
powda-cli/src/tui/: app.rs  events.rs  mods.rs  types.rs
powda-cli/src/ui/: mod.rs
powda-core/: Cargo.toml
powda-core/src/: error.rs  lib.rs
powda-core/src/crypto/: encoding.rs  manager.rs  master_key.rs  mod.rs  vault.rs
powda-core/src/domain/: mod.rs  password_entry.rs  value_objects.rs
powda-core/src/repository/: mod.rs  store.rs
