[package]
name = "powda-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "powda"
path = "src/main.rs"

[dependencies]
powda-core = {path = "../powda-core/"}
clap = {version = "4.4", features = ["derive"]}
rpassword = "7.4.0"
serde = {version=" 1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.35", features = ["full"]}
