[package]
name = "powda-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-trait = "0.1.89"

argon2 = "0.5"
chacha20poly1305 = "0.11.0-rc.1"
rand = "0.8"
rand_core =  {version = "0.6", features = ["getrandom"]}
zeroize = {version = "1.8.2", features= ["derive"]}
base64 = "0.22.1"
sha2 = "0.11.0-rc.2"


